--- a/YeelightController/YeelightController.csproj
+++ b/YeelightController/YeelightController.csproj
@@ -13,9 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="9.1.1" />
     <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="NKristek.Wpf.Converters" Version="2.0.2" />
+    <PackageReference Include="PixiEditor.ColorPicker" Version="3.2.0" />
+    <PackageReference Include="ScreenCapturer" Version="3.0.0" />
     <PackageReference Include="YeelightAPI" Version="1.9.0" />
   </ItemGroup>
 
